style/admin.style.css
@import url('https://fonts.googleapis.com/css?family=Roboto:500');
@font-face {
	font-family: Nunito;
	src: url(../elements/fonts/Nunito-Regular.ttf);
}

#adminForm body{
	background: #fff;
	font-family: 'Nunito', sans-serif;
}
.free_version_banner .get_full_version, .free_version_banner .get_full_version:link
{
	font-family: 'Nunito', sans-serif!important;
}
.ui_custom_pl { border-radius:5px;background: #ededf0; visibility: visible !important; }
.ui_custom_pl * { visibility: hidden; }
.text-right{text-align: right;}
.text-left{text-align: left;}
#poststuff #post-body.columns-2.huge_contacts {
	margin:0;
}
button[disabled], input[disabled], select[disabled], textarea[disabled] {
	cursor: pointer !important;
	opacity: .5 !important;
}
.selectbox-block>input[disabled]{
	opacity: 1 !important;
}
/*######### Huge IT Contact Forms ###########*/
#save-button-block {
	float:left;
	margin:0 0 0 0;
}
#save-buttom {
	width: 108px;
	height: 44px;
	font-weight: 600;
	border: none;
	background-color: #7198ff;
	border-radius: 3px;
	color: #fefefe;
	font-size: 19px;
	font-family: 'Nunito';
	cursor: pointer;
	margin-top: 10px;
	margin-bottom: 18px;
}
#poststuff h2{
	font-size: 19px;
	padding: 0 0 15px 0;
}
#poststuff {

	border: 1px solid #d0d6dc;
	background-color:#fff ;
}

.saveSpinnerWrapper{
	display: inline-block;
	width: 20px !important;
	height: 20px !important;
	margin-right: 3px !important;
}
.saveSpinnerWrapper>img{
	display: none;
}
img{
	max-width: 100%;
}
img.themeSpinner{
	vertical-align: middle;
	margin-left: 2px;
	display: none;
}
#save-button-block  .select-theme {
	width:251px;
	height: 30px;

}
#save-button-block  .select-theme:focus {
	border: 1px solid #ddd;
	-webkit-box-shadow: none !important;
	box-shadow:none !important;
}
#save-button-block>label{
	font-size: 14px;
	padding-left: 5px;
}
.hugeit_contacts-list-page{
	width: 95% !important;
}
#hugeit_contacts-list-page{
	padding: 15px;
}
#hugeit_contacts-list-page .tablenav{
	margin-bottom: 10px;
}
#hugeit_contacts-list-page .tablenav .displaying-num{
	font-weight: 500;
	color: #116faa;
}
#hugeit_contacts-list-page .actions label {
	display:block;
	float:left;
	margin-top:5px;
	margin-right: 5px;
}

#hugeit_contacts-list-page .actions input {
	display:block;
	float:left;
	margin-right: 5px;
}
#hugeit_contacts-list-page table tr.has-background {background:#f9f9f9;}
#hugeit_contacts-list-page .add-new-h2{
	cursor: pointer;
}
#post-body-heading #shortcode_fields{
	position: absolute;
	top: 70px;
	left: 0;
	width: 550px;
	height: 125px;
	font-size: 15px;
	font-weight: 700;
	display: none;
}
#post-body-heading #shortcode_fields .short_incl,
#post-body-heading #shortcode_fields .templ_incl{
	width: 45%;
	float: left;
	height: 125px;
	text-align: center;
	padding: 10px;
}
#post-body-heading #shortcode_fields .templ_incl{
	float: right !important;
}
#post-body-heading #shortcode_fields>div>textarea{
	width: 100%;
	height: 60px;
	resize: none;
	margin-top: 13px;
	text-align: center;
	font-weight: normal;
}
#save-button-block div.theme{
	display: inline-block;
	height: 24px;
	border-left: 1px solid #7D7D7D;
	padding-left: 5px;
}
#hg_n_btn_block > button{
	height: 30px;
}
#hg_n_btn_block > input:active{
	transform: translateY(1px);
}

#hg_n_btn_block {
	margin-top: 20px;
}

 #shortcode_toggle:focus{
	-webkit-box-shadow:none;
	box-shadow: none;
}
 #hg_options_block {
	 display: flex;
 }
 #hg_options_block div {
	 display: grid;
 }
 #select_form_show_title {
	 width: 251px;
	 height: 30px;
 }
 #hg_sel_to_left {
	 margin-left: 50px;
 }
 #hg_options_block div select {
	 margin-top:15px;
	 border-radius: 5px;
	 border: 1px solid #ebebeb;
	 color: #a5a5a5;
 }
 #hg_options_block div label {
	 color: #303030;
	 font-family: "Roboto";
	 font-size: 16px;
	 font-weight: 500;
 }
#shortcode_toggle{
	float:right;
	width: 150px;
	border: none;
	height: 44px;
	background-color: #7198ff;
	color: #fefefe;
	font-family: "Roboto";
	font-size: 15px;
	font-weight: 500;
	margin-right: 5px;
}
/*TABS*/
.hugeit_tabs_block {
	width:100%;
}
/*top tabs*/
.hugeit_tabs_block .hugeit_contact_top_tabs  {
	width:100%;
	margin:0;
	padding-left: 10px;
	height: 44px;
	box-sizing: border-box;
	margin-top: 20px;
	border-bottom: 1px solid #d0d6dc;

}
.hugeit_tabs_block .hugeit_contact_top_tabs li {
	position:relative;
	display:block;
	float:left;
	height:29px;
	margin:0 5px 0 0;
	padding:0 0 0 0;

}
.hugeit_tabs_block .hugeit_contact_top_tabs li:last-child {
	position: static;
	float: right;
	width: 70px;
	height: 74px;
	margin-top: -31px;
	margin-right: 0;
	background: url(../images/add-n-f.png) no-repeat #7198ff;
	background-position-x: 25px;
	background-position-y: 23px;


}
.hugeit_tabs_block .hugeit_contact_top_tabs li:last-child:active {
	background: rgba(113, 152, 255, 0.95);


}

.hugeit_tabs_block .hugeit_contact_top_tabs li.active {
	border-bottom:1px solid #fff;
	padding-right:16px;
	background-position:right center;
	background-repeat:no-repeat;
	margin-top: -7px;
}
.hugeit_tabs_block .hg_cut_border {
	right: 17px;
	top: 1px;
	width: 0;
	position: absolute;
	height: 0;
	border-style: solid;
	border-width: 0 41px 50px 0;
	border-color: transparent #ffffff transparent transparent;
}
.hugeit_tabs_block .hg_cut_inl_border {
	width: 1px;
	height: 64px;
	background: #d0d6dc;
	transform: rotateZ(141deg);
	margin-left: 20px;
	margin-top: -7px;
}

.hugeit_tabs_block .hugeit_contact_top_tabs li a,.hugeit_tabs_block .hugeit_contact_top_tabs li a:link,.hugeit_tabs_block .hugeit_contact_top_tabs li a:visited {
	display:block;
	text-decoration:none;
	padding:5px 10px 5px 10px;
	outline:none;
	font-family: Roboto;
	font-size: 16px;
	font-weight: 400;
	color: #505050;
	height: 64px;
}
.hugeit_tabs_block .hugeit_contact_top_tabs li a:hover,.hugeit_tabs_block .hugeit_contact_top_tabs li a:focus,.hugeit_tabs_block .hugeit_contact_top_tabs li a:active {
	color: rgb(18, 121, 185);
}
/* ... */

